--- a/mc/mod1/styles.css
+++ b/mc/mod1/styles.css
@@ -16,7 +16,10 @@ body {
     width: 800px;
     text-align: center;
 }
-
+h2 {
+    font-size: 22px;
+    margin-bottom: 20px;
+}
 h1 {
     font-size: 24px;
     margin-bottom: 20px;
@@ -24,7 +27,7 @@ h1 {
 
 #question-text {
     
-    font-size: 22px;
+font-size: 22px;
 margin-bottom: 20px;
 text-align: left;
 font-weight: bold;
